[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menu.gd" type="Script" id=1]
[ext_resource path="res://img/main menu.jpg" type="Texture" id=2]
[ext_resource path="res://scenes/size20.tres" type="DynamicFont" id=3]

[node name="menu" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 0.535, 0.555 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Node2D" parent="." index="1"]

[node name="VBoxContainer" type="VBoxContainer" parent="UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.02
anchor_bottom = 0.0
margin_left = 481.0
margin_top = 221.0
margin_right = 585.72
margin_bottom = 373.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="level1" type="Button" parent="UI/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 106.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "level 01"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="level2" type="Button" parent="UI/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 39.0
margin_right = 106.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "level 02"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="settings" type="Button" parent="UI/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 78.0
margin_right = 106.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "settings"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="exit" type="Button" parent="UI/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 117.0
margin_right = 106.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "exit game"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="UI/VBoxContainer/level1" to="." method="_on_level1_pressed"]

[connection signal="pressed" from="UI/VBoxContainer/level2" to="." method="_on_level2_pressed"]

[connection signal="pressed" from="UI/VBoxContainer/settings" to="." method="_on_settings_pressed"]

[connection signal="pressed" from="UI/VBoxContainer/exit" to="." method="_on_exit_pressed"]


